+ P3tr0viCh.ScaleTerminal. + ToolTip keys.

--- a/WeightTerminal/WeightTerminal.csproj
+++ b/WeightTerminal/WeightTerminal.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="P3tr0viCh.ScaleTerminal">
+      <HintPath>..\..\..\..\Projects.exe\P3tr0viCh.ScaleTerminal\Release\P3tr0viCh.ScaleTerminal.dll</HintPath>
+    </Reference>
     <Reference Include="P3tr0viCh.Utils">
       <HintPath>..\..\..\..\Projects.exe\P3tr0viCh.Utils\Release\P3tr0viCh.Utils.dll</HintPath>
     </Reference>
